eet (1.1.0-1) UNRELEASED; urgency=low

  * New upstream release

 -- Albin Tonnerre <albin.tonnerre@gmail.com>  Sat, 27 Sep 2008 13:47:11 +0200

eet (1.0.1-1) unstable; urgency=low

  * New upstream release

 -- Jan Lübbe <jluebbe@debian.org>  Tue, 20 May 2008 18:21:30 +0200

eet (1.0.0-1) unstable; urgency=low

  [ Albin Tonnerre ]
  * libeet-dev depends on libjpeg62-dev for static linking
  * Handle soname change
  * Upload to unstable

  [ Jan Lübbe ]
  * New upstream release
  * Do not remove the documentation shipped in the tarball

 -- Jan Lübbe <jluebbe@debian.org>  Mon, 21 Apr 2008 11:32:41 +0200

eet (0.9.10.042-1) experimental; urgency=low

  * Initial release (Closes: #461950)

 -- Albin Tonnerre <albin.tonnerre@gmail.com>  Fri, 25 Jan 2008 12:21:30 +0100